--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "build-prod": "webpack --mode production"
   },
   "files": [
-    "dist",
-    "component.d.ts",
-    "component.js"
+    "dist", 
+    "index.d.ts",
+    "index.js"
   ],
   "peerDependencies": {},
   "dependencies": {
     "@babel/core": "^7.18.10",
     "@popperjs/core": "^2.11.6",
+    "@types/cleave.js": "^1.4.7",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.17",
+    "@types/react-flatpickr": "^3.8.7",
     "@types/react-select": "^5.0.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.5",
@@ -28,11 +30,13 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
+    "cleave.js": "^1.6.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-flatpickr": "^3.10.13",
     "react-select": "^5.4.0",
     "reactstrap": "^9.1.3",
     "ts-loader": "^9.3.1",
