--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-prod": "webpack --mode production"
   },
   "files": [
-    "dist", 
+    "dist",
     "index.d.ts",
     "index.js"
   ],
@@ -33,12 +33,17 @@
     "cleave.js": "^1.6.0",
     "html-webpack-plugin": "^5.5.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "numberinput": "^0.9.10",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-flatpickr": "^3.10.13",
+    "react-number-format": "^4.9.3",
     "react-select": "^5.4.0",
     "reactstrap": "^9.1.3",
+    "styled-components": "^5.3.5",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0"
