--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cleave.js": "^1.4.7",
     "@types/lodash": "^4.14.182",
     "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/react-flatpickr": "^3.8.7",
     "@types/react-select": "^5.0.1",
     "babel-core": "^6.26.3",
