--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "numberinput": "^0.9.10",
+    "rc-tree": "^5.6.7",
     "react": "^18.2.0",
+    "react-complex-tree": "^1.1.11",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
